src/main/java/design/unstructured/stix/evaluator/grammar/StixPatternParser.java
package design.unstructured.stix.evaluator.grammar;

import java.util.List;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.*;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class StixPatternParser extends Parser {

    static {
        RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION);
    }

    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache
            = new PredictionContextCache();
    public static final int IntNegLiteral = 1, IntPosLiteral = 2, FloatNegLiteral = 3, FloatPosLiteral = 4,
            HexLiteral = 5, BinaryLiteral = 6, StringLiteral = 7, BoolLiteral = 8, TimestampLiteral = 9,
            AND = 10, OR = 11, NOT = 12, FOLLOWEDBY = 13, LIKE = 14, MATCHES = 15, ISSUPERSET = 16,
            ISSUBSET = 17, EXISTS = 18, LAST = 19, IN = 20, START = 21, STOP = 22, SECONDS = 23,
            TRUE = 24, FALSE = 25, WITHIN = 26, REPEATS = 27, TIMES = 28, IdentifierWithoutHyphen = 29,
            IdentifierWithHyphen = 30, EQ = 31, NEQ = 32, LT = 33, LE = 34, GT = 35, GE = 36, QUOTE = 37,
            COLON = 38, DOT = 39, COMMA = 40, RPAREN = 41, LPAREN = 42, RBRACK = 43, LBRACK = 44,
            PLUS = 45, HYPHEN = 46, MINUS = 47, POWER_OP = 48, DIVIDE = 49, ASTERISK = 50, WS = 51,
            COMMENT = 52, LINE_COMMENT = 53, InvalidCharacter = 54;
    public static final int RULE_pattern = 0, RULE_observationExpressions = 1, RULE_observationExpressionOr = 2,
            RULE_observationExpressionAnd = 3, RULE_observationExpression = 4, RULE_comparisonExpression = 5,
            RULE_comparisonExpressionAnd = 6, RULE_propTest = 7, RULE_orderingComparator = 8,
            RULE_stringLiteral = 9, RULE_startStopQualifier = 10, RULE_withinQualifier = 11,
            RULE_repeatedQualifier = 12, RULE_objectPath = 13, RULE_objectType = 14,
            RULE_firstPathComponent = 15, RULE_objectPathComponent = 16, RULE_setLiteral = 17,
            RULE_primitiveLiteral = 18, RULE_orderableLiteral = 19;

    private static String[] makeRuleNames() {
        return new String[]{
            "pattern", "observationExpressions", "observationExpressionOr", "observationExpressionAnd",
            "observationExpression", "comparisonExpression", "comparisonExpressionAnd",
            "propTest", "orderingComparator", "stringLiteral", "startStopQualifier",
            "withinQualifier", "repeatedQualifier", "objectPath", "objectType", "firstPathComponent",
            "objectPathComponent", "setLiteral", "primitiveLiteral", "orderableLiteral"
        };
    }
    public static final String[] ruleNames = makeRuleNames();

    private static String[] makeLiteralNames() {
        return new String[]{
            null, null, null, null, null, null, null, null, null, null, "'AND'",
            "'OR'", "'NOT'", "'FOLLOWEDBY'", "'LIKE'", "'MATCHES'", "'ISSUPERSET'",
            "'ISSUBSET'", "'EXISTS'", "'LAST'", "'IN'", "'START'", "'STOP'", "'SECONDS'",
            "'true'", "'false'", "'WITHIN'", "'REPEATS'", "'TIMES'", null, null,
            null, null, "'<'", "'<='", "'>'", "'>='", "'''", "':'", "'.'", "','",
            "')'", "'('", "']'", "'['", "'+'", null, "'-'", "'^'", "'/'", "'*'"
        };
    }
    private static final String[] _LITERAL_NAMES = makeLiteralNames();

    private static String[] makeSymbolicNames() {
        return new String[]{
            null, "IntNegLiteral", "IntPosLiteral", "FloatNegLiteral", "FloatPosLiteral",
            "HexLiteral", "BinaryLiteral", "StringLiteral", "BoolLiteral", "TimestampLiteral",
            "AND", "OR", "NOT", "FOLLOWEDBY", "LIKE", "MATCHES", "ISSUPERSET", "ISSUBSET",
            "EXISTS", "LAST", "IN", "START", "STOP", "SECONDS", "TRUE", "FALSE",
            "WITHIN", "REPEATS", "TIMES", "IdentifierWithoutHyphen", "IdentifierWithHyphen",
            "EQ", "NEQ", "LT", "LE", "GT", "GE", "QUOTE", "COLON", "DOT", "COMMA",
            "RPAREN", "LPAREN", "RBRACK", "LBRACK", "PLUS", "HYPHEN", "MINUS", "POWER_OP",
            "DIVIDE", "ASTERISK", "WS", "COMMENT", "LINE_COMMENT", "InvalidCharacter"
        };
    }
    private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;

    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override

    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() {
        return "StixPattern.g4";
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public StixPatternParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    public static class PatternContext extends ParserRuleContext {

        public ObservationExpressionsContext observationExpressions() {
            return getRuleContext(ObservationExpressionsContext.class, 0);
        }

        public TerminalNode EOF() {
            return getToken(StixPatternParser.EOF, 0);
        }

        public PatternContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_pattern;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof StixPatternListener) {
                ((StixPatternListener) listener).enterPattern(this);
            }
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof StixPatternListener) {
                ((StixPatternListener) listener).exitPattern(this);
            }
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof StixPatternVisitor) {
                return ((StixPatternVisitor<? extends T>) visitor).visitPattern(this);
            } else {
                return visitor.visitChildren(this);
            }
        }
    }

    public final PatternContext pattern() throws RecognitionException {
        PatternContext _localctx = new PatternContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_pattern);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(40);
                observationExpressions(0);
                setState(41);
                match(EOF);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class ObservationExpressionsContext extends ParserRuleContext {

        public ObservationExpressionOrContext observationExpressionOr() {
            return getRuleContext(ObservationExpressionOrContext.class, 0);
        }

        public List<ObservationExpressionsContext> observationExpressions() {
            return getRuleContexts(ObservationExpressionsContext.class);
        }

        public ObservationExpressionsContext observationExpressions(int i) {
            return getRuleContext(ObservationExpressionsContext.class, i);
        }

        public TerminalNode FOLLOWEDBY() {
            return getToken(StixPatternParser.FOLLOWEDBY, 0);
        }

        public ObservationExpressionsContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_observationExpressions;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof StixPatternListener) {
                ((StixPatternListener) listener).enterObservationExpressions(this);
            }
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof StixPatternListener) {
                ((StixPatternListener) listener).exitObservationExpressions(this);
            }
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof StixPatternVisitor) {
                return ((StixPatternVisitor<? extends T>) visitor).visitObservationExpressions(this);
            } else {
                return visitor.visitChildren(this);
            }
        }
    }

    public final ObservationExpressionsContext observationExpressions() throws RecognitionException {
        return observationExpressions(0);
    }

    private ObservationExpressionsContext observationExpressions(int _p) throws RecognitionException {
        ParserRuleContext _parentctx = _ctx;
        int _parentState = getState();
        ObservationExpressionsContext _localctx = new ObservationExpressionsContext(_ctx, _parentState);
        ObservationExpressionsContext _prevctx = _localctx;
        int _startState = 2;
        enterRecursionRule(_localctx, 2, RULE_observationExpressions, _p);
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                {
                    setState(44);
                    observationExpressionOr(0);
                }
                _ctx.stop = _input.LT(-1);
                setState(51);
                _errHandler.sync(this);
                _alt = getInterpreter().adaptivePredict(_input, 0, _ctx);
                while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
                    if (_alt == 1) {
                        if (_parseListeners != null) {
                            triggerExitRuleEvent();
                        }
                        _prevctx = _localctx;
                        {
                            {
                                _localctx = new ObservationExpressionsContext(_parentctx, _parentState);
                                pushNewRecursionContext(_localctx, _startState, RULE_observationExpressions);
                                setState(46);
                                if (!(precpred(_ctx, 2))) {
                                    throw new FailedPredicateException(this, "precpred(_ctx, 2)");
                                }
                                setState(47);
                                match(FOLLOWEDBY);
                                setState(48);
                                observationExpressions(3);
                            }
                        }
                    }
                    setState(53);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input, 0, _ctx);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            unrollRecursionContexts(_parentctx);
        }
        return _localctx;
    }

    public static class ObservationExpressionOrContext extends ParserRuleContext {

        public ObservationExpressionAndContext observationExpressionAnd() {
            return getRuleContext(ObservationExpressionAndContext.class, 0);
        }

        public List<ObservationExpressionOrContext> observationExpressionOr() {
            return getRuleContexts(ObservationExpressionOrContext.class);
        }

        public ObservationExpressionOrContext observationExpressionOr(int i) {
            return getRuleContext(ObservationExpressionOrContext.class, i);
        }

        public TerminalNode OR() {
            return getToken(StixPatternParser.OR, 0);
        }

        public ObservationExpressionOrContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_observationExpressionOr;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof StixPatternListener) {
                ((StixPatternListener) listener).enterObservationExpressionOr(this);
            }
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof StixPatternListener) {
                ((StixPatternListener) listener).exitObservationExpressionOr(this);
            }
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof StixPatternVisitor) {
                return ((StixPatternVisitor<? extends T>) visitor).visitObservationExpressionOr(this);
            } else {
                return visitor.visitChildren(this);
            }
        }
    }

    public final ObservationExpressionOrContext observationExpressionOr() throws RecognitionException {
        return observationExpressionOr(0);
    }

    private ObservationExpressionOrContext observationExpressionOr(int _p) throws RecognitionException {
        ParserRuleContext _parentctx = _ctx;
        int _parentState = getState();
        ObservationExpressionOrContext _localctx = new ObservationExpressionOrContext(_ctx, _parentState);
        ObservationExpressionOrContext _prevctx = _localctx;
        int _startState = 4;
        enterRecursionRule(_localctx, 4, RULE_observationExpressionOr, _p);
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                {
                    setState(55);
                    observationExpressionAnd(0);
                }
                _ctx.stop = _input.LT(-1);
                setState(62);
                _errHandler.sync(this);
                _alt = getInterpreter().adaptivePredict(_input, 1, _ctx);
                while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
                    if (_alt == 1) {
                        if (_parseListeners != null) {
                            triggerExitRuleEvent();
                        }
                        _prevctx = _localctx;
                        {
                            {
                                _localctx = new ObservationExpressionOrContext(_parentctx, _parentState);
                                pushNewRecursionContext(_localctx, _startState, RULE_observationExpressionOr);
                                setState(57);
                                if (!(precpred(_ctx, 2))) {
                                    throw new FailedPredicateException(this, "precpred(_ctx, 2)");
                                }
                                setState(58);
                                match(OR);
                                setState(59);
                                observationExpressionOr(3);
                            }
                        }
                    }
                    setState(64);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input, 1, _ctx);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            unrollRecursionContexts(_parentctx);
        }
        return _localctx;
    }

    public static class ObservationExpressionAndContext extends ParserRuleContext {

        public ObservationExpressionContext observationExpression() {
            return getRuleContext(ObservationExpressionContext.class, 0);
        }

        public List<ObservationExpressionAndContext> observationExpressionAnd() {
            return getRuleContexts(ObservationExpressionAndContext.class);
        }

        public ObservationExpressionAndContext observationExpressionAnd(int i) {
            return getRuleContext(ObservationExpressionAndContext.class, i);
        }

        public TerminalNode AND() {
            return getToken(StixPatternParser.AND, 0);
        }

        public ObservationExpressionAndContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_observationExpressionAnd;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof StixPatternListener) {
                ((StixPatternListener) listener).enterObservationExpressionAnd(this);
            }
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof StixPatternListener) {
                ((StixPatternListener) listener).exitObservationExpressionAnd(this);
            }
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof StixPatternVisitor) {
                return ((StixPatternVisitor<? extends T>) visitor).visitObservationExpressionAnd(this);
            } else {
                return visitor.visitChildren(this);
            }
        }
    }

    public final ObservationExpressionAndContext observationExpressionAnd() throws RecognitionException {
        return observationExpressionAnd(0);
    }

    private ObservationExpressionAndContext observationExpressionAnd(int _p) throws RecognitionException {
        ParserRuleContext _parentctx = _ctx;
        int _parentState = getState();
        ObservationExpressionAndContext _localctx = new ObservationExpressionAndContext(_ctx, _parentState);
        ObservationExpressionAndContext _prevctx = _localctx;
        int _startState = 6;
        enterRecursionRule(_localctx, 6, RULE_observationExpressionAnd, _p);
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                {
                    setState(66);
                    observationExpression(0);
                }
                _ctx.stop = _input.LT(-1);
                setState(73);
                _errHandler.sync(this);
                _alt = getInterpreter().adaptivePredict(_input, 2, _ctx);
                while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
                    if (_alt == 1) {
                        if (_parseListeners != null) {
                            triggerExitRuleEvent();
                        }
                        _prevctx = _localctx;
                        {
                            {
                                _localctx = new ObservationExpressionAndContext(_parentctx, _parentState);
                                pushNewRecursionContext(_localctx, _startState, RULE_observationExpressionAnd);
                                setState(68);
                                if (!(precpred(_ctx, 2))) {
                                    throw new FailedPredicateException(this, "precpred(_ctx, 2)");
                                }
                                setState(69);
                                match(AND);
                                setState(70);
                                observationExpressionAnd(3);
                            }
                        }
                    }
                    setState(75);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input, 2, _ctx);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            unrollRecursionContexts(_parentctx);
        }
        return _localctx;
    }

    public static class ObservationExpressionContext extends ParserRuleContext {

        public ObservationExpressionContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_observationExpression;
        }

        public ObservationExpressionContext() {
        }

        public void copyFrom(ObservationExpressionContext ctx) {
            super.copyFrom(ctx);
        }
    }

    public static class ObservationExpressionRepeatedContext extends ObservationExpressionContext {

        public ObservationExpressionContext observationExpression() {
            return getRuleContext(ObservationExpressionContext.class, 0);
        }

        public RepeatedQualifierContext repeatedQualifier() {
            return getRuleContext(RepeatedQualifierContext.class, 0);
        }

        public ObservationExpressionRepeatedContext(ObservationExpressionContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof StixPatternListener) {
                ((StixPatternListener) listener).enterObservationExpressionRepeated(this);
            }
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof StixPatternListener) {
                ((StixPatternListener) listener).exitObservationExpressionRepeated(this);
            }
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof StixPatternVisitor) {
                return ((StixPatternVisitor<? extends T>) visitor).visitObservationExpressionRepeated(this);
            } else {
                return visitor.visitChildren(this);
            }
        }
    }

    public static class ObservationExpressionSimpleContext extends ObservationExpressionContext {

        public TerminalNode LBRACK() {
            return getToken(StixPatternParser.LBRACK, 0);
        }

        public ComparisonExpressionContext comparisonExpression() {
            return getRuleContext(ComparisonExpressionContext.class, 0);
        }

        public TerminalNode RBRACK() {
            return getToken(StixPatternParser.RBRACK, 0);
        }

        public ObservationExpressionSimpleContext(ObservationExpressionContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof StixPatternListener) {
                ((StixPatternListener) listener).enterObservationExpressionSimple(this);
            }
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof StixPatternListener) {
                ((StixPatternListener) listener).exitObservationExpressionSimple(this);
            }
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof StixPatternVisitor) {
                return ((StixPatternVisitor<? extends T>) visitor).visitObservationExpressionSimple(this);
            } else {
                return visitor.visitChildren(this);
            }
        }
    }

    public static class ObservationExpressionCompoundContext extends ObservationExpressionContext {

        public TerminalNode LPAREN() {
            return getToken(StixPatternParser.LPAREN, 0);
        }

        public ObservationExpressionsContext observationExpressions() {
            return getRuleContext(ObservationExpressionsContext.class, 0);
        }

        public TerminalNode RPAREN() {
            return getToken(StixPatternParser.RPAREN, 0);
        }

        public ObservationExpressionCompoundContext(ObservationExpressionContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof StixPatternListener) {
                ((StixPatternListener) listener).enterObservationExpressionCompound(this);
            }
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof StixPatternListener) {
                ((StixPatternListener) listener).exitObservationExpressionCompound(this);
            }
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof StixPatternVisitor) {
                return ((StixPatternVisitor<? extends T>) visitor).visitObservationExpressionCompound(this);
            } else {
                return visitor.visitChildren(this);
            }
        }
    }

    public static class ObservationExpressionWithinContext extends ObservationExpressionContext {

        public ObservationExpressionContext observationExpression() {
            return getRuleContext(ObservationExpressionContext.class, 0);
        }

        public WithinQualifierContext withinQualifier() {
            return getRuleContext(WithinQualifierContext.class, 0);
        }

        public ObservationExpressionWithinContext(ObservationExpressionContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof StixPatternListener) {
                ((StixPatternListener) listener).enterObservationExpressionWithin(this);
            }
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof StixPatternListener) {
                ((StixPatternListener) listener).exitObservationExpressionWithin(this);
            }
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof StixPatternVisitor) {
                return ((StixPatternVisitor<? extends T>) visitor).visitObservationExpressionWithin(this);
            } else {
                return visitor.visitChildren(this);
            }
        }
    }

    public static class ObservationExpressionStartStopContext extends ObservationExpressionContext {

        public ObservationExpressionContext observationExpression() {
            return getRuleContext(ObservationExpressionContext.class, 0);
        }

        public StartStopQualifierContext startStopQualifier() {
            return getRuleContext(StartStopQualifierContext.class, 0);
        }

        public ObservationExpressionStartStopContext(ObservationExpressionContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof StixPatternListener) {
                ((StixPatternListener) listener).enterObservationExpressionStartStop(this);
            }
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof StixPatternListener) {
                ((StixPatternListener) listener).exitObservationExpressionStartStop(this);
            }
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof StixPatternVisitor) {
                return ((StixPatternVisitor<? extends T>) visitor).visitObservationExpressionStartStop(this);
            } else {
                return visitor.visitChildren(this);
            }
        }
    }

    public final ObservationExpressionContext observationExpression() throws RecognitionException {
        return observationExpression(0);
    }

    private ObservationExpressionContext observationExpression(int _p) throws RecognitionException {
        ParserRuleContext _parentctx = _ctx;
        int _parentState = getState();
        ObservationExpressionContext _localctx = new ObservationExpressionContext(_ctx, _parentState);
        ObservationExpressionContext _prevctx = _localctx;
        int _startState = 8;
        enterRecursionRule(_localctx, 8, RULE_observationExpression, _p);
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                setState(85);
                _errHandler.sync(this);
                switch (_input.LA(1)) {
                    case LBRACK: {
                        _localctx = new ObservationExpressionSimpleContext(_localctx);
                        _ctx = _localctx;
                        _prevctx = _localctx;
